# ros

./: README.md  turtle.txt
lab1/: .commands.txt.kate-swp  commands.txt
lab1/ex0/: B
lab1/ex1/: commands.txt
lab2/: comands.txt
lab2/ex01/: .bashrc
lab2/ex02/: list_exec_action_tutorials.txt  package_path_ros2topic.txt
lab2/ex03/egor/: package.xml  setup.cfg  setup.py
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt
lab2/ex06/: cmd_vel.txt
lab2/ex07/: parameter_server.txt  rosservice_list.txt
lab2/ex08/: rqt_console.csv
lab2/ex09/: screenshot
lab2/ex09/new_package/: CMakeLists.txt  package.xml
lab2/ex10/text_to_cmd_vel/: package.xml  setup.py
lab2/ex10/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel.py
lab3/ex01/: comands.txt
lab3/ex01/service_full_name/: CMakeLists.txt  package.xml
lab3/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
lab3/ex01/service_full_name/srv/: SummFullName.srv
lab3/ex02/: commands.txt
lab3/ex03/: commands.txt  pose_speed_x1.yaml  pose_speed_x2.yaml
lab3/ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.db3
lab3/ex05/: commands.txt
lab3/ex05/move_to_goal/move_to_goal/: move_to_goal.py
lab4/ex01/: commands.txt  last_transform.txt  transform.txt
lab4/ex02/: carrot.rviz  commands.txt
lab4/ex03/: commands.txt
lab4/ex03/time_travel/launch/: turtle_tf2_demo.launch.py
lab5/ex01/: README
lab5/ex02/: README
lab5/ex03/: README
lab5/ex04/: README
lab5/ex05/: README
lab5/ex05/my_traektoria/: package.xml  setup.cfg  setup.py
lab5/ex05/my_traektoria/description/: robot.urdf  robot.urdf.xacro
lab5/ex05/my_traektoria/launch/: my_traektoria.launch.py
lab5/ex05/my_traektoria/my_traektoria/: my_traektoria.py
